--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
 
 <body>
     <div class="top">
-        <img class=' top-cloud ' src="Images/cloud.png" alt="cloud">
+        <img class=' top-cloud ' src="cloud.png" alt="cloud">
         <h1>I'm Bhavya.</h1>
         <h2>a developer.</h2>
-        <img class='bottom-cloud' src="Images/cloud.png" alt="cloud">
-        <img class='mountain-img' src="Images/mountain.png " alt="mountain ">
+        <img class='bottom-cloud' src="cloud.png" alt="cloud">
+        <img class='mountain-img' src="mountain.png " alt="mountain ">
     </div>
     <div class=" middle-container ">
         <div class="profile ">
-            <img src="Images/Bhavya-modified.png " alt="Bhavya ">
+            <img src="Bhavya-modified.png " alt="Bhavya ">
             <h2>Hello.</h2>
             <p class='intro'>I seek challenging opportunities where I can fully use my skills. Looking forward to an entry level position to start-up my career.
             </p>
@@ -30,12 +30,12 @@
         <div class="skills ">
             <h2>My Skills.</h2>
             <div class="skill-row ">
-                <img class="skl1" src="Images/skl1.jpg" alt="sk1">
+                <img class="skl1" src="skl1.jpg" alt="sk1">
                 <h3>Programming</h3>
                 <p class='sk1-para'>I am much intreseted in programming and so I learnt the following Backend Programming Languages like C, Python, Java and also have knowledge in Data Structures and Algorithms. Ready to work as a backend developer.</p>
             </div>
             <div class="skill-row ">
-                <img class="skl2" src="Images/skill2.jpg" alt=" ">
+                <img class="skl2" src="skill2.jpg" alt=" ">
                 <h3>Web Development</h3>
                 <p class="sk2">Designing is the most beautiful part of creating a website. Having more intrest in desiging part, I have took up courses like HTML, CSS, JS regarding web Development</p>
             </div>
