--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <h2>Get In Touch</h2>
             <h3>If you are willing to hire me as a Developer.</h3>
             <p class="contact-des">I am intrested in working as a developer & give my best for the development of the organisation..</p>
-            <a class="btn " href="mailto:bhavya@gmail.com ">CONTACT ME</a>
+            <a class="btn " href="mailto:vbhavya7890@gmail.com ">CONTACT ME</a>
         </div>
     </div>
 
